# backend_endogamia

./: .gitignore  README.md  pyproject.toml
config/: settings_exemplo.txt  urls.py
core/: admin.py
core/migrations/: 0001_initial.py  0002_categoriaregistro_organizacao_animal_numero_animal_and_more.py  0002_lote_organizacao.py  0003_alter_animal_animal_ativo.py  0003_lote_organizacao.py  0004_animal_lote.py  0004_desmame_remove_animal_data_nascimento_and_more.py  0005_alter_animal_data_nascimento.py  0005_identificador.py  0006_animal_chifre_animal_padrao.py  0006_rename_nome_organizacao_nome_organizacao.py  0007_animal_active_categoriaregistro_active_and_more.py  0007_categoriaregistro.py  0008_rename_organizacao_lote_subdivisao.py  0009_remove_lote_vaca_vacalote.py  0010_remove_vacalote_data_atualizacao_and_more.py  0011_alter_desmame_data_desmame.py  0012_alter_vacalote_unique_together.py
core/models/: __init__.py  animal.py  categoria_registro.py  desmame.py  identificador.py  lote.py  nascimento.py  organizacao.py  pelagem.py  raca.py  subdivisao.py  vaca.py  vaca_lote.py
core/serializers/: __init__.py  animal.py  categoria_registro.py  desmame.py  identificador.py  lote.py  nascimento.py  organizacao.py  pelagem.py  raca.py  subdivisao.py  vaca_lote.py
core/views/: __init__.py  categoria_registro.py  desmame.py  identificador.py  lote.py  nascimento.py  organizacao.py  pelagem.py  raca.py  subdivisao.py  vaca_lote.py
